--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <title>Wellcome To My World!</title>
 </head>
 <body>
+<img src="/i/eg_chinarose.jpg" />
 <h1 style=”text-align: center”><marquee><i>Hello World!<i><marquee></h1>
 </body>
 </html>
