--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Wellcome To My World!</title>
 </head>
 <body>
-<img src="1.jpg" />
+<img src="first.jpg" />
 <h1 style=”text-align: center”><marquee><i>Hello World!<i><marquee></h1>
 </body>
 </html>
