--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <img src="first.jpg" width="1370" height="650" />
-<h1 style=”text-align: center”><marquee><i>Hello World! This is my 2017<i><marquee></h1>
+<h1 style="color:red;"><marquee><i>Hello World! This is my 2017 life<i><marquee></h1>
 </body>
 </html>
