--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <body>
 <img src="first.jpg" width="1370" height="650" />
 <h1 style="color:red;"><marquee><i>Hello World! This is my 2017 life<i><marquee></h1>
+<p><font size="10" face="arial" color="Crimson">Study</font></p>
 </body>
 </html>
