--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <img src="first.jpg" width="1370" height="650" />
-<h1 style="color:red;"><marquee><i>Hello World! This is my 2017 life<i><marquee></h1>
+<h1 style="text-align: center"><marquee><i>Hello World! This is my 2017 life<i><marquee></h1>
 <p><font size="10" face="arial" color="Crimson">Study</font></p>
 </body>
 </html>
