--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <img src="first.jpg" width="1370" height="650" />
-<p><font size="15" face="arial" color="Yellow">Hello world! this is my 2017 life.</font></p>
+<p><marquee><font size="15" face="arial" color="Maroon">Hello world! this is my 2017 life.</font></marquee></p>
 <p><font size="8" face="arial" color="Crimson">Study</font></p>
 </body>
 </html>
