--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <body>
 <img src="first.jpg" width="1370" height="650" />
 <p><marquee><strong><font size="20" face="SimSun" color="Maroon">Hello world! this is my 2017 life.</font></strong></marquee></p>
-<p><font size="8" face="arial" color="Crimson"> * Study</font></p>
+<p><strong><font size="10" face="arial" color="Crimson"> Study</font></strong></p>
 </body>
 </html>
