--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 </head>
 <body>
 <img src="first.jpg" width="1370" height="650" />
-<p><marquee><strong><font size="20" face="SimSun" color="Maroon">Hello world! this is my 2017 life.</font></strong></marquee></p>
-<p><strong><font size="10" face="arial" color="Crimson"> Study</font></strong></p>
+<p><marquee><strong><font size="20" face="SimSun" color="Maroon">Hello world! this is my web and i will record something about myself.</font></strong></marquee></p>
+<p><strong><font size="10" face="arial" color="IndianRed"> Study</font></strong></p>
+<p><strong><font size="10" face="arial" color="IndianRed"> Travel</font></strong></p>
+<p><strong><font size="10" face="arial" color="IndianRed"> Food</font></strong></p>
 </body>
 </html>
