--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 </head>
 <body>
 <img src="first.jpg" width="1370" height="650" />
-<blockquote><p><marquee><strong><font size="20" face="arial" color="Maroon">Hello world! this is my web and i will record something about myself.</font></strong></marquee></p></blockquote>
+
+<p><marquee><strong><font size="20" face="arial" color="Maroon">Hello world! this is my web and i will record something about myself.</font></strong></marquee></p>
 <blockquote><p><strong><font size="10" face="arial" color="IndianRed"> Study</font></strong></p></blockquote>
 <blockquote><p><strong><font size="10" face="arial" color="IndianRed"> Travel</font></strong></p></blockquote>
 <blockquote><p><strong><font size="10" face="arial" color="IndianRed"> Food</font></strong></p><blo/ckquote>
