--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <p><strong><font size="8" face="arial" color="Tomato"> some place i want to travel </font></strong></p>
 <p><strong><font size="17" face="arial" color="IndianRed"> Food</font></strong></p>
 <p><strong><font size="8" face="arial" color="Tomato"> some food i want to eat </font></strong></p>
+<p><strong><font size="17" face="arial" color="IndianRed"> Hometown</font></strong></p>
+ <p><strong><font size="8" face="arial" color="Tomato"> some things in my hometown that i want to share </font></strong></p>
 <p><strong><font size="17" face="arial" color="IndianRed"> Study</font></strong></p>
 <p><strong><font size="8" face="arial" color="Tomato"> some websites i want to study </font></strong></p>
 <h1><a href="http://www.w3school.com.cn/tags/tag_head.asp"> HTML </a></h1>
