--- a/study.html
+++ b/study.html
@@ -1,8 +1,8 @@
-﻿<html>
+<html>
 <head>
 <title>Travel!</title>
 </head>
-<body>
+<body link="black" alink="red" vlink="green">
 <h1><a href="http://www.w3school.com.cn/tags/tag_head.asp"> HTML </a></h1>
 <h1><a href="https://github.com/"> Github </a></h1>
 <h1><a href="http://www.dcsco.dk/Moodle2/ZJ/"> Jan's website </a></blockquote></h1>
