--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Wellcome To My World!</title>
 </head>
 <body>
-<img src="first.jpg" width="1370" height="650" />
+<img src="week1-2/first.jpg" width="1370" height="650" />
 <p><marquee><strong><font size="25" face="arial" color="Maroon">Hello world! this is my web and i will record something about myself.</font></strong></marquee></p>
   
 <blockquote><p><strong><font size="17" face="arial" color="IndianRed"> Travel</font></strong></p>
