--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <h1><a href="http://www.dcsco.dk/Moodle2/ZJ/"> Jan's website </a></blockquote></h1>
   
 <audio autoplay="autoplay">
-<source src="梦中的婚礼.mp3" type="audio/mp3" />
-<source src="梦中的婚礼.ogg" type="audio/ogg />
+<source src="week1-2/梦中的婚礼.mp3" type="audio/mp3" />
+<source src="week1-2/梦中的婚礼.ogg" type="audio/ogg />
 </audio>
 </body>
 </html>
