--- a/index.html
+++ b/index.html
@@ -2,21 +2,27 @@
 <head>
 <title>Wellcome To My World!</title>
 </head>
+
 <body>
 <img src="/week1-2/first.jpg" width="1370" height="650" />
 <p><marquee><strong><font size="25" face="arial" color="Maroon">Hello world! this is my web and i will record something about myself.</font></strong></marquee></p>
+ 
+<table border="1" width="1300">  
+<tr>
+<th><blockquote><p><strong><font size="17" face="arial" color="IndianRed"> Travel</font></strong></p>
+<p><strong><font size="8" face="arial" color="Tomato"> some place i want to travel </font></strong></p></th>
+<th><p><strong><font size="17" face="arial" color="IndianRed"> Food</font></strong></p>
+<p><strong><font size="8" face="arial" color="Tomato"> some food i want to eat </font></strong></p></th>
+</tr>
   
-<blockquote><p><strong><font size="17" face="arial" color="IndianRed"> Travel</font></strong></p>
-<p><strong><font size="8" face="arial" color="Tomato"> some place i want to travel </font></strong></p>
-<p><strong><font size="17" face="arial" color="IndianRed"> Food</font></strong></p>
-<p><strong><font size="8" face="arial" color="Tomato"> some food i want to eat </font></strong></p>
-<p><strong><font size="17" face="arial" color="IndianRed"> Hometown</font></strong></p>
- <p><strong><font size="8" face="arial" color="Tomato"> some things in my hometown that i want to share </font></strong></p>
-<p><strong><font size="17" face="arial" color="IndianRed"> Study</font></strong></p>
-<p><strong><font size="8" face="arial" color="Tomato"> some websites i want to study </font></strong></p>
+<tr>
+<td><p><strong><font size="17" face="arial" color="IndianRed"> Hometown</font></strong></p>
+<p><strong><font size="8" face="arial" color="Tomato"> some things in my hometown that i want to share </font></strong></p></td>
+<td><p><strong><font size="17" face="arial" color="IndianRed"> Study</font></strong></p>
+<p><strong><font size="8" face="arial" color="Tomato"> some websites i want to study </font></strong></p></td>
 <h1><a href="http://www.w3school.com.cn/tags/tag_head.asp"> HTML </a></h1>
-<h1><a href="https://github.com/"> Github </a></h1>
-<h1><a href="http://www.dcsco.dk/Moodle2/ZJ/"> Jan's website </a></blockquote></h1>
+
+
   
 <audio autoplay="autoplay">
 <source src="week1-2/梦中的婚礼.mp3" type="audio/mp3" />
