--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 <p><strong><font size="8" face="arial" color="Tomato"> some things in my hometown that i want to share </font></strong></p></td>
 <td><p><strong><font size="17" face="arial" color="IndianRed"> Study</font></strong></p>
 <p><strong><font size="8" face="arial" color="Tomato"> some websites i want to study </font></strong></p></td>
-<h1><a href="http://www.w3school.com.cn/tags/tag_head.asp"> HTML </a></h1>
+<h1><a href="http://www.w3school.com.cn/tags/tag_head.asp"> HTML </a></h1></td>
+</tr> 
 
 
   
