--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <th><blockquote><p><strong><font size="15" face="arial" color="IndianRed">Travel</font></strong></p>
 <p><strong><font size="6" face="arial" color="Tomato">some place i want to travel </font></strong></p></th>
 <th><p><strong><font size="15" face="arial" color="IndianRed">Food</font></strong></p>
-<p><strong><font size="6" face="arial" color="Tomato">some food i want to eat </font></strong></p></th>
+<p><strong><font size="6" face="arial" color="Tomato">some food i want to eat </font></strong></p></blockquote></th>
 </tr>
   
 <tr>
-<td><p><strong><font size="15" face="arial" color="IndianRed">Hometown</font></strong></p>
+<td><blockquote><p><strong><font size="15" face="arial" color="IndianRed">Hometown</font></strong></p>
 <p><strong><font size="6" face="arial" color="Tomato">some things in my hometown that i want to share </font></strong></p></td>
 <td><p><strong><font size="15" face="arial" color="IndianRed">Study</font></strong></p>
-<p><strong><font size="6" face="arial" color="Tomato">some websites i want to study </font></strong></p></td>
+<p><strong><font size="6" face="arial" color="Tomato">some websites i want to study </font></strong></p></blockquote></td>
 </tr> 
 
 
