--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
  
 <table border="1" width="1370">  
 <tr>
-<th><blockquote><p><strong><font size="15" face="arial" color="IndianRed">Travel</font></strong></p>
-<p><strong><font size="6" face="arial" color="Tomato">some place i want to travel </font></strong></p></th>
-<th><p><strong><font size="15" face="arial" color="IndianRed">Food</font></strong></p>
-<p><strong><font size="6" face="arial" color="Tomato">some food i want to eat </font></strong></p></blockquote></th>
+<th><p><center><strong><font size="15" face="arial" color="IndianRed">Travel</font></strong></center></p>
+<p><center><strong><font size="6" face="arial" color="Tomato">some place i want to travel </font></strong></center></p></th>
+<th><center><p><strong><font size="15" face="arial" color="IndianRed">Food</font></strong></center></p>
+<p><center><strong><font size="6" face="arial" color="Tomato">some food i want to eat </font></strong></center></p></th>
 </tr>
   
 <tr>
-<td><blockquote><p><strong><font size="15" face="arial" color="IndianRed">Hometown</font></strong></p>
-<p><strong><font size="6" face="arial" color="Tomato">some things in my hometown that i want to share </font></strong></p></td>
-<td><p><strong><font size="15" face="arial" color="IndianRed">Study</font></strong></p>
-<p><strong><font size="6" face="arial" color="Tomato">some websites i want to study </font></strong></p></blockquote></td>
+<td><p><center><strong><font size="15" face="arial" color="IndianRed">Hometown</font></strong></center></p>
+<p><center><strong><font size="6" face="arial" color="Tomato">some things in my hometown that i want to share </font></strong></center></p></td>
+<td><p><center><strong><font size="15" face="arial" color="IndianRed">Study</font></strong></center></p>
+<p><center><strong><font size="6" face="arial" color="Tomato">some websites i want to study </font></strong></center></p></td>
 </tr> 
 
 
