--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <tr>
 <audio controls="controls">
 <source src="week1-2/梦中的婚礼.mp3" type="audio/mp3" />
-<source src="week1-2/梦中的婚礼.ogg" type="audio/ogg />
+<source src="week1-2/梦中的婚礼.ogg" type="audio/ogg" />
 </tr>
 </audio>
 </body>
