--- a/index.html
+++ b/index.html
@@ -21,14 +21,19 @@
 <td><p><center><strong><font size="15" face="arial" color="IndianRed">Study</font></strong></center></p>
 <p><center><strong><font size="6" face="arial" color="Tomato">some websites i want to study </font></strong></center></p></td>
 </tr> 
+</table>
 
+<table border="0">
 <tr>
 <audio controls="controls">
 <source src="week1-2/梦中的婚礼.mp3" type="audio/mp3" />
 <source src="week1-2/梦中的婚礼.ogg" type="audio/ogg" />
 </tr>
+</table>
 
-<tr><center><font size="4" face="arial" color="Pink">pjjeniffer</font></cente></tr>
+<table bgcolor="LightPink">
+<tr><center><font size="4" face="arial" color="Crimson">pjjeniffer</font></cente></tr>
+</table>
 </audio>
 </body>
 </html>
