--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </tr>
 </table>
 
-<table bgcolor="LightPink">
+<table bgcolor="LightPink" width="1370">
 <tr><center><font size="4" face="arial" color="Crimson">pjjeniffer</font></cente></tr>
 </table>
 </audio>
