--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
 </table>
 
 <table bgcolor="LightPink" width="1370">
-<tr><center><font size="4" face="arial" color="Crimson">pjjeniffer</font></cente></tr>
+<tr></tr>
 </table>
+<center><font size="4" face="arial" color="Crimson">pjjeniffer</font></cente>
+
 </audio>
 </body>
 </html>
