--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
 <title>Wellcome To My World!</title>
 </head>
-
-<body>
+ 
+<body style="background-image:url(你的图片地址);background-position:center>
 <img src="/week1-2/first.jpg" width="1370" height="650" />
 <p><marquee><strong><font size="25" face="arial" color="Maroon">Hello world! this is my web and i will record something about myself.</font></strong></marquee></p>
  
