--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Wellcome To My World!</title>
 </head>
  
-<body style="background-image:week1-2/background1.jpg;background-position:center">
+<body style="background-image:/week1-2/background1.jpg;background-position:center">
 <img src="/week1-2/first.jpg" width="1370" height="650" />
 <p><marquee><strong><font size="25" face="arial" color="Maroon">Hello world! this is my web and i will record something about myself.</font></strong></marquee></p>
  
