--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <table bgcolor="LightPink" width="1370">
 <tr></tr>
 </table>
-<center><font size="4" face="arial" color="Crimson">pjjeniffer</font></cente>
+<center><font size="4" face="arial" color="White">pjjeniffer</font></cente>
 
 </audio>
 </body>
