--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
  
 <body background="/week1-2/background1.jpg">
-<img src="/week1-2/fenbalei.jpg" width="600" height="400" />
+<img src="/week1-2/fenbalei.jpg" width="700" height="400" align="middle"/>
 <p><marquee><strong><font size="25" face="arial" color="Maroon">Hello world! this is my web and i will record something about myself.</font></strong></marquee></p>
  
 <table border="0" width="1370">  
