--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <title>Wellcome To My World!</title>
 </head>
  
-<body background="/week1-2/background1.jpg">
-<img src="/week1-2/fenbalei.jpg" width="400" height="700" align="middle"/>
+<body background="/week1-2/background1.jpg"/>
+<img src="/week1-2/fenmao.jpg" width="800" height="650" >
 <p><marquee><strong><font size="25" face="arial" color="Maroon">Hello world! this is my web and i will record something about myself.</font></strong></marquee></p>
  
 <table border="0" width="1370">  
