--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Wellcome To My World!</title>
 </head>
  
-<body background="/week1-2/background1.jpg"/>
+<body background="/week1-2/background1.jpg" width=“1370”/>
 <img src="/week1-2/fenmao.jpg" width="800" height="650" >
 <p><marquee><strong><font size="25" face="arial" color="Maroon">Hello world! this is my web and i will record something about myself.</font></strong></marquee></p>
  
