--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
  
 <body background="/week1-2/background1.jpg" width=“1370”/>
 
-<p><marquee><strong><font size="25" face="arial" color="Maroon">Hello world! this is my web and i will record something about myself.</font></strong></marquee></p>
+<p>
+<img src="/week1-2/fenbalei.jpg" />
+<marquee><strong><font size="26" face="arial" color="Maroon">Hello world! this is my web and i will record something about myself.</font></strong></marquee>
+</p>
  
 <table border="0" width="1370">  
 <tr>
