--- a/index.html
+++ b/index.html
@@ -5,24 +5,23 @@
  
 <body background="/week1-2/background1.jpg" width=“1370”/>
 
-<p>
-<img src="/week1-2/fenbalei.jpg" />
-<marquee><strong><font size="26" face="arial" color="Maroon">Hello world! this is my web and i will record something about myself.</font></strong></marquee>
-</p>
+
+<img src="/week1-2/fenbalei.jpg" width="1350" height="1200"/>
+<p><marquee><strong><font size="26" face="arial" color="Maroon">Hello world! this is my web and i will record something about myself.</font></strong></marquee></p>
  
 <table border="0" width="1370">  
 <tr>
-<th><p><center><strong><font size="15" face="arial" color="IndianRed"><a herf="http://www.w3school.com.cn">Travel</a></font></strong></center></p>
-<p><center><strong><font size="6" face="arial" color="Tomato">some place i want to travel </font></strong></center></p></th>
-<th><center><p><strong><font size="15" face="arial" color="IndianRed">Food</font></strong></center></p>
-<p><center><strong><font size="6" face="arial" color="Tomato">some food i want to eat </font></strong></center></p></th>
+<th><p><center><strong><font size="16" face="arial" color="IndianRed"><a herf="http://www.w3school.com.cn">Travel</a></font></strong></center></p>
+<p><center><strong><font size="7" face="arial" color="Tomato">some place i want to travel </font></strong></center></p></th>
+<th><center><p><strong><font size="16" face="arial" color="IndianRed">Food</font></strong></center></p>
+<p><center><strong><font size="7" face="arial" color="Tomato">some food i want to eat </font></strong></center></p></th>
 </tr>
   
 <tr>
-<td><p><center><strong><font size="15" face="arial" color="IndianRed">Hometown</font></strong></center></p>
-<p><center><strong><font size="6" face="arial" color="Tomato">some things in my hometown that i want to share </font></strong></center></p></td>
-<td><p><center><strong><font size="15" face="arial" color="IndianRed">Study</font></strong></center></p>
-<p><center><strong><font size="6" face="arial" color="Tomato">some websites i want to study </font></strong></center></p></td>
+<td><p><center><strong><font size="16" face="arial" color="IndianRed">Hometown</font></strong></center></p>
+<p><center><strong><font size="7" face="arial" color="Tomato">some things in my hometown that i want to share </font></strong></center></p></td>
+<td><p><center><strong><font size="16" face="arial" color="IndianRed">Study</font></strong></center></p>
+<p><center><strong><font size="7" face="arial" color="Tomato">some websites i want to study </font></strong></center></p></td>
 </tr> 
 </table>
 
