--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Wellcome To My World!</title>
 </head>
  
-<body background="/week1-2/background1.jpg" width=“1370”/>
+<body background="/week1-2/background.jpg" width=“1370”/>
 
 
 
