--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <p><marquee><strong><font size="26" face="arial" color="Maroon">Hello world! this is my web and i will record something about myself.</font></strong></marquee></p>
  
-<table border="0" width="1370">  
+<table border="0" width=100>  
 <tr>
 <th><p><center><strong><font size="16" face="arial" color="IndianRed"><a herf="http://www.w3school.com.cn">Travel</a></font></strong></center></p>
 <p><center><strong><font size="7" face="arial" color="Tomato">some place i want to travel </font></strong></center></p></th>
