--- a/week3/study.html
+++ b/week3/study.html
@@ -1,10 +1,18 @@
-﻿<html>
+<html>
 <head>
 <title>Travel!</title>
 </head>
-<body>
-<h1><a href="http://www.w3school.com.cn/tags/tag_head.asp"> HTML </a></h1>
-<h1><a href="https://github.com/"> Github </a></h1>
-<h1><a href="http://www.dcsco.dk/Moodle2/ZJ/"> Jan's website </a></blockquote></h1>
+<body background="/week3/studyback.jpg">
+  
+<table border="1">
+<tr>
+  <th><h1><a href="http://www.w3school.com.cn/tags/tag_head.asp"> HTML </a></h1></th>
+  <th><h1><a href="https://github.com/"> Github </a></h1></th>
+</tr>
+<tr>
+  <td><h1><a href="http://www.dcsco.dk/Moodle2/ZJ/"> Jan's website </a></blockquote></h1></td>
+  <td><h1><a href="http://www.runoob.com/java/java-intro.html">Introduction of java </a></blockquote></h1></td>
+</tr>
+
 </body>
 </html>
