--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <p><center><strong><font size="5" face="arial" color="Tomato">some things in my hometown that i want to share </font></strong></center></p></td>
 <td><p><center><strong><font size="15" face="arial" color="IndianRed">Study</font></strong></center></p>
 <p><center><strong><font size="5" face="arial" color="Tomato">some websites i want to study </font></strong></center></p>
-<p><a href="https://pjjeniffer.github.io/week3/study">more</a></p></td>
+<h2><p><a href="https://pjjeniffer.github.io/week3/study">more</a></p></h2></td>
 </tr> 
 </table>
 
