--- a/week3/study.html
+++ b/week3/study.html
@@ -4,7 +4,7 @@
 </head>
 <body background="/week3/studyback.jpg">
   
-<table border="1">
+<table border="1" width="100%">
 <tr>
   <th><h1><a href="http://www.w3school.com.cn/tags/tag_head.asp"> HTML </a></h1></th>
   <th><h1><a href="https://github.com/"> Github </a></h1></th>
