--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
-<title>Wellcome To My World!</title>
+<style type="text/css">
+ [title]
+ {color:LightCoral;}
 </head>
  
 <body background="/week1-2/background.jpg" width=“1370”/>
@@ -22,7 +24,7 @@
 <p><center><strong><font size="5" face="arial" color="Tomato">some things in my hometown that i want to share </font></strong></center></p></td>
 <td><p><center><strong><font size="15" face="arial" color="IndianRed">Study</font></strong></center></p>
 <p><center><strong><font size="5" face="arial" color="Tomato">some websites i want to study </font></strong></center></p>
-<h2><p><a href="https://pjjeniffer.github.io/week3/study">more</a></p></h2></td>
+<h2><p><a title="Hello world" href="https://pjjeniffer.github.io/week3/study">more</a></p></h2></td>
 </tr> 
 </table>
 
