--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <style type="text/css">
  [title]
  {color:LightCoral;}
+ </style>
 </head>
  
 <body background="/week1-2/background.jpg" width=“1370”/>
