--- a/Individual Project/individual.html
+++ b/Individual Project/individual.html
@@ -1,7 +1,8 @@
-﻿<html>
+<html>
 <head>
-<title>Travel!</title>
+<title>Html And Css</title>
+<link rel="stylesheet" type="text/css" href="main.css" />
 </head>
-<body background="/week3/studyback.jpg">
+<body">
 </body>
 </html>
