--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 <p><marquee><strong><font size="26" face="arial" color="Maroon">Hello world! this is my web and i will record something about myself.</font></strong></marquee></p>
- 
+ <h1><p><a href="https://pjjeniffer.github.io/Individual%20Project/individual">My Individual Project</a></p></h1>
 <table border="0" width=“100%”>  
 <tr>
 <th><p><center><strong><font size="15" face="arial" color="IndianRed"><a herf="http://www.w3school.com.cn">Travel</a></font></strong></center></p>
