--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <style type="text/css">
- h2.col
+ .col
  {
   color:IndianRed;
   text-align:center;
@@ -14,7 +14,7 @@
 
 
 <p><marquee><strong><font size="26" face="arial" color="Maroon">Hello world! this is my web and i will record something about myself.</font></strong></marquee></p>
- <h1><p><a class="col" href="https://pjjeniffer.github.io/Individual%20Project/individual">My Individual Project</a></p></h1>
+ <h1 class="col"><p><a href="https://pjjeniffer.github.io/Individual%20Project/individual">My Individual Project</a></p></h1>
 <table border="0" width=“100%”>  
 <tr>
 <th><p><center><strong><font size="15" face="arial" color="IndianRed"><a herf="http://www.w3school.com.cn">Travel</a></font></strong></center></p>
@@ -28,7 +28,7 @@
 <p><center><strong><font size="5" face="arial" color="Tomato">some things in my hometown that i want to share </font></strong></center></p></td>
 <td><p><center><strong><font size="15" face="arial" color="IndianRed">Study</font></strong></center></p>
 <p><center><strong><font size="5" face="arial" color="Tomato">some websites i want to study </font></strong></center></p>
-<h2><p><a class="col" href="https://pjjeniffer.github.io/week3/study">more</a></p></h2></td>
+<h2 class="col" ><p><a href="https://pjjeniffer.github.io/week3/study">more</a></p></h2></td>
 </tr> 
 </table>
 
