--- a/Individual Project/individual.html
+++ b/Individual Project/individual.html
@@ -4,5 +4,13 @@
 <link rel="stylesheet" type="text/css" href="main.css" />
 </head>
 <body">
+<div><img src="/Individual Project/girl.jpg"  alt="logo"/></div>
+</hr>           
+<div>
+ <h1><strong><font size="26" face="arial" color="#FF9900">html</font></strong></h1>
+</div>
+<div>
+ <h1><strong><font size="26" face="arial" color="#FF9900">html</font></strong></h1>
+</div>
 </body>
 </html>
