--- a/Individual Project/individual.html
+++ b/Individual Project/individual.html
@@ -2,10 +2,10 @@
 <head>
 <title>Html And Css</title>
 <link rel="stylesheet" type="text/css" href="main.css" />
+<link rel="stylesheet" type="text/css" href="main2.css" />
 </head>
 <body">
-<div><img src="/Individual Project/girl.jpg"  alt="logo"/></div>
-</hr>           
+</hr>
 <div>
  <h1><strong><font size="26" face="arial" color="#FF9900">html</font></strong></h1>
 </div>
