--- a/Individual Project/individual.html
+++ b/Individual Project/individual.html
@@ -2,15 +2,15 @@
 <head>
 <title>Html And Css</title>
 <link rel="stylesheet" type="text/css" href="main.css" />
-<link rel="stylesheet" type="text/css" href="main2.css" />
 </head>
 <body">
+      <img src="/Individual Project/girl.jpg"  alt="logo" height="100" width="100"/>
 </hr>
 <div>
- <h1><strong><font size="26" face="arial" color="#FF9900">html</font></strong></h1>
+      <strong><font size="26" face="arial" color="#FF9900"><a href="http://www.w3school.com.cn">HTML</a></font></strong>
 </div>
 <div>
- <h1><strong><font size="26" face="arial" color="#FF9900">html</font></strong></h1>
+      <strong><font size="26" face="arial" color="#FF9900"><a href="http://www.w3school.com.cn">CSS</a></font></strong>
 </div>
 </body>
 </html>
