--- a/Individual Project/individual.html
+++ b/Individual Project/individual.html
@@ -5,12 +5,16 @@
 </head>
 <body">
       <img src="/Individual Project/girl.jpg"  alt="logo" height="100" width="100"/>
-</hr>
-<div>
-      <strong><font size="26" face="arial" color="#FF9900"><a href="http://www.w3school.com.cn">HTML</a></font></strong>
+<hr />
+<div style="color:#FF9900">
+      <strong><font size="26""><a href="http://www.w3school.com.cn">HTML</a></font></strong>
+
+
+      <strong><font size="26"><a href="http://www.w3school.com.cn">CSS</a></font></strong>
 </div>
-<div>
-      <strong><font size="26" face="arial" color="#FF9900"><a href="http://www.w3school.com.cn">CSS</a></font></strong>
-</div>
+<hr/>
+<footer>
+      <p><font size="26"">Made by: pjjeniffer</font></p>
+</footer>
 </body>
 </html>
