--- a/Individual Project/individual.html
+++ b/Individual Project/individual.html
@@ -6,15 +6,15 @@
 <body">
       <img src="/Individual Project/girl.jpg"  alt="logo" height="100" width="100"/>
 <hr />
-<div style="color:#FF9900">
-      <strong><font size="26""><a href="http://www.w3school.com.cn">HTML</a></font></strong>
-
-
-      <strong><font size="26"><a href="http://www.w3school.com.cn">CSS</a></font></strong>
+<div>
+      <strong><font size="30" color="#FF9900"><a href="http://www.w3school.com.cn">HTML</a></font></strong>
+</div>
+<div>
+      <strong><font size="30" color="#FF9900"><a href="http://www.w3school.com.cn">CSS</a></font></strong>
 </div>
 <hr/>
 <footer>
-      <p><font size="26"">Made by: pjjeniffer</font></p>
+      <p><font size="15">Made by: pjjeniffer</font></p>
 </footer>
 </body>
 </html>
