--- a/Individual Project/individual.html
+++ b/Individual Project/individual.html
@@ -1,20 +1,23 @@
 <html>
 <head>
 <title>Html And Css</title>
-<link rel="stylesheet" type="text/css" href="main.css" />
+ <link rel="stylesheet" type="text/css" href="main.css" />
+ <style type="text/css">
+.center {text-align: center}
+ </style>
 </head>
 <body">
       <img src="/Individual Project/girl.jpg"  alt="logo" height="100" width="100"/>
 <hr />
 <div>
-      <strong><font size="30" color="#FF9900"><a href="http://www.w3school.com.cn">HTML</a></font></strong>
+      <strong><font size="30" color="#FF9900"><a class="center" href="http://www.w3school.com.cn">HTML</a></font></strong>
 </div>
 <div>
-      <strong><font size="30" color="#FF9900"><a href="http://www.w3school.com.cn">CSS</a></font></strong>
+      <strong><font class="center" size="30" color="#FF9900"><a  href="http://www.w3school.com.cn">CSS</a></font></strong>
 </div>
 <hr/>
 <footer>
-      <p><font size="15">Made by: pjjeniffer</font></p>
+      <p><font size="10" color="FF6600">Made by: pjjeniffer</font></p>
 </footer>
 </body>
 </html>
