--- a/Individual Project/individual.html
+++ b/Individual Project/individual.html
@@ -10,14 +10,14 @@
       <img src="/Individual Project/girl.jpg"  alt="logo" height="100" width="100"/>
 <hr />
 <div>
-      <strong><font size="30" color="#FF9900"><a class="center" href="http://www.w3school.com.cn">HTML</a></font></strong>
+      <p class="center"><font size="30" color="#FF9900"><a href="http://www.w3school.com.cn">HTML</a></font></p>
 </div>
 <div>
-      <strong><font class="center" size="30" color="#FF9900"><a  href="http://www.w3school.com.cn">CSS</a></font></strong>
+      <p class="center"><strong><font size="30" color="#FF9900"><a  href="http://www.w3school.com.cn">CSS</a></font></strong></p>
 </div>
 <hr/>
 <footer>
-      <p><font size="10" color="FF6600">Made by: pjjeniffer</font></p>
+      <p><font color="FFCC33">Made by: pjjeniffer</font></p>
 </footer>
 </body>
 </html>
