--- a/Individual Project/individual.html
+++ b/Individual Project/individual.html
@@ -3,18 +3,41 @@
 <title>Html And Css</title>
  <link rel="stylesheet" type="text/css" href="main.css" />
  <style type="text/css">
-.center {text-align: center}
+
+  #Header {
+margin:150px 0px 10px 0px;
+padding:17px 0px 0px 20px;
+border:1px dashed #999;
+background-color:#eee;
+
+ #Content {
+margin:0px 50px 50px 200px;
+padding:10px;
+border:1px dashed #CF9;
+background-color: #eee;
+}
+
+ #Menu {
+position:absolute;
+top:100px;
+left:20px;
+width:150px;
+padding:10px;
+background-color:#eee;
+border:1px dashed #999;
+}
  </style>
 </head>
 <body">
       <img src="/Individual Project/girl.jpg"  alt="logo" height="100" width="100"/>
 <hr />
-<div>
-      <p class="center"><font size="30" color="#FF9900"><a href="http://www.w3school.com.cn">HTML</a></font></p>
-</div>
-<div>
-      <p class="center"><strong><font size="30" color="#FF9900"><a  href="http://www.w3school.com.cn">CSS</a></font></strong></p>
-</div>
+ <p id="Menu"><font size="20"><a href="http://www.w3school.com.cn">HTML</a>
+                                              <a href="http://www.w3school.com.cn">CSS</a></font> </p>
+ <p id="Header"><font size="26"></font>What is HTML and CSS?</font></p>
+ <p id="Content"><font size="16"></font>HTML is HyperText Markup Language,The hypertext markup language is an application under the standard generic markup language,
+                                        which is also a specification, a standard that marks the various parts of a web page to be displayed by marking symbols.CSS is Cascading Style Sheets,
+                                        A computer language used to display file styles such as HTML or XML. CSS can be used to not only modify pages in a static way, 
+                                        but also to format the elements of the page dynamically with various scripting languages.</p>
 <hr/>
 <footer>
       <p><font color="FFCC33">Made by: pjjeniffer</font></p>
