--- a/Individual Project/individual.html
+++ b/Individual Project/individual.html
@@ -4,20 +4,20 @@
  <link rel="stylesheet" type="text/css" href="main.css" />
  <style type="text/css">
 
-  #Header {
-margin:150px 0px 10px 0px;
+  .Header {
+margin:50px 0px 10px 0px;
 padding:17px 0px 0px 20px;
 border:1px dashed #999;
 background-color:#eee;
 
- #Content {
-margin:0px 50px 50px 200px;
-padding:10px;
-border:1px dashed #CF9;
+ .Content {
+margin:0px 100px 50px;
+padding:25px;
+border:1px dashed #999;
 background-color: #eee;
 }
 
- #Menu {
+ .Menu {
 position:absolute;
 top:100px;
 left:20px;
@@ -31,10 +31,10 @@ border:1px dashed #999;
 <body">
       <img src="/Individual Project/girl.jpg"  alt="logo" height="100" width="100"/>
 <hr />
- <p id="Menu"><font size="20"><a href="http://www.w3school.com.cn">HTML</a>
-                                              <a href="http://www.w3school.com.cn">CSS</a></font> </p>
- <p id="Header"><font size="26"></font>What is HTML and CSS?</font></p>
- <p id="Content"><font size="16"></font>HTML is HyperText Markup Language,The hypertext markup language is an application under the standard generic markup language,
+ <p class="Menu"><font size="16"><a href="http://www.w3school.com.cn">HTML</a>
+ <p class="Menu"><font size="16"><a href="http://www.w3school.com.cn">CSS</a>                                             
+ <p class="Header"><font size="24"></font>What is HTML and CSS?</font></p>
+ <p class="Content"><font size="16"></font>HTML is HyperText Markup Language,The hypertext markup language is an application under the standard generic markup language,
                                         which is also a specification, a standard that marks the various parts of a web page to be displayed by marking symbols.CSS is Cascading Style Sheets,
                                         A computer language used to display file styles such as HTML or XML. CSS can be used to not only modify pages in a static way, 
                                         but also to format the elements of the page dynamically with various scripting languages.</p>
