--- a/Individual Project/individual.html
+++ b/Individual Project/individual.html
@@ -31,7 +31,7 @@ border:1px dashed #999;
 <body">
       <img src="/Individual Project/girl.jpg"  alt="logo" height="100" width="100"/>
 <hr />
- <p class="Menu"><font size="16"><a href="http://www.w3school.com.cn">HTML</a>
+ <p class="Menu"><font size="16"><a href="http://www.w3school.com.cn">HTML</a><br/>
  <p class="Menu"><font size="16"><a href="http://www.w3school.com.cn">CSS</a>                                             
  <p class="Header"><font size="24"></font>What is HTML and CSS?</font></p>
  <p class="Content"><font size="16"></font>HTML is HyperText Markup Language,The hypertext markup language is an application under the standard generic markup language,
