--- a/Individual Project/individual.html
+++ b/Individual Project/individual.html
@@ -31,13 +31,13 @@ border:1px dashed #999;
 <body">
       <img src="/Individual Project/girl.jpg"  alt="logo" height="100" width="100"/>
 <hr />
- <p class="Menu"><font size="10"><a href="http://www.w3school.com.cn">HTML</a>
- <p class="Menu"><font size="10"><a href="http://www.w3school.com.cn">CSS</a>                                             
- <p class="Header"><font size="20"></font>What is HTML and CSS?</font></p>
- <p class="Content"><font size="5"></font>HTML is HyperText Markup Language,The hypertext markup language is an application under the standard generic markup language,
+ <p class="Menu"><h3><a href="http://www.w3school.com.cn">HTML</h3></a>
+ <p class="Menu"><h3><a href="http://www.w3school.com.cn">CSS</h3</a>                                             
+ <p class="Header"><h1>What is HTML and CSS?</h1></p>
+ <p class="Content"><h4>HTML is HyperText Markup Language,The hypertext markup language is an application under the standard generic markup language,
                                         which is also a specification, a standard that marks the various parts of a web page to be displayed by marking symbols.CSS is Cascading Style Sheets,
                                         A computer language used to display file styles such as HTML or XML. CSS can be used to not only modify pages in a static way, 
-                                        but also to format the elements of the page dynamically with various scripting languages.</p>
+                                        but also to format the elements of the page dynamically with various scripting languages.</h4></p>
 <hr/>
 <footer>
       <p><font color="FFCC33">Made by: pjjeniffer</font></p>
