--- a/Individual Project/individual.html
+++ b/Individual Project/individual.html
@@ -32,7 +32,7 @@ border:1px dashed #999;
       <img src="/Individual Project/girl.jpg"  alt="logo" height="100" width="100"/>
 <hr />
  <p class="Menu"><h3><a href="http://www.w3school.com.cn">HTML</h3></a>
- <p class="Menu"><h3><a href="http://www.w3school.com.cn">CSS</h3</a>                                             
+ <p class="Menu"><h3><a href="http://www.w3school.com.cn">CSS</h3></a>                                             
  <p class="Header"><h1>What is HTML and CSS?</h1></p>
  <p class="Content"><h4>HTML is HyperText Markup Language,The hypertext markup language is an application under the standard generic markup language,
                                         which is also a specification, a standard that marks the various parts of a web page to be displayed by marking symbols.CSS is Cascading Style Sheets,
