--- a/Individual Project/individual.html
+++ b/Individual Project/individual.html
@@ -7,14 +7,10 @@
   .Header {
 margin:50px 0px 10px 0px;
 padding:17px 0px 0px 20px;
-border:1px dashed #999;
-background-color:#eee;
-
+}
  .Content {
 margin:0px 100px 50px;
 padding:25px;
-border:1px dashed #999;
-background-color: #eee;
 }
 
  .Menu {
@@ -23,20 +19,18 @@ top:100px;
 left:20px;
 width:150px;
 padding:10px;
-background-color:#eee;
-border:1px dashed #999;
 }
  </style>
 </head>
 <body">
       <img src="/Individual Project/girl.jpg"  alt="logo" height="100" width="100"/>
 <hr />
- <p class="Menu"><h3><a href="https://pjjeniffer.github.io/Individual%20Project/html.html">HTML</h3></a>
- <p class="Menu"><h3><a href="https://pjjeniffer.github.io/Individual%20Project/css.html">CSS</h3></a>                                             
- <p class="Header"><h1>What is HTML and CSS?</h1></p>
+ <p class="Header"><h3><a href="https://pjjeniffer.github.io/Individual%20Project/html.html">HTML</h3></a>
+ <p class="Header"><h3><a href="https://pjjeniffer.github.io/Individual%20Project/css.html">CSS</h3></a>                                             
+ <p class="Menu"><h1>What is HTML and CSS?</h1></p>
  <p class="Content"><h4>HTML is HyperText Markup Language,The hypertext markup language is an application under the standard generic markup language,
                                         which is also a specification, a standard that marks the various parts of a web page to be displayed by marking symbols.CSS is Cascading Style Sheets,
-                                        A computer language used to display file styles such as HTML or XML. CSS can be used to not only modify pages in a static way, 
+                                        A computer language used to display file styles such as HTML or XML. <br />CSS can be used to not only modify pages in a static way, 
                                         but also to format the elements of the page dynamically with various scripting languages.</h4></p>
 <hr/>
 <footer>
