--- a/Individual Project/individual.html
+++ b/Individual Project/individual.html
@@ -15,10 +15,8 @@ padding:25px;
 
  .Menu {
 position:absolute;
-top:100px;
-left:20px;
-width:150px;
-padding:10px;
+top:50px;
+left:50px;
 }
  </style>
 </head>
@@ -26,7 +24,7 @@ padding:10px;
       <img src="/Individual Project/girl.jpg"  alt="logo" height="100" width="100"/>
 <hr />
  <p class="Menu"><h3><a href="https://pjjeniffer.github.io/Individual%20Project/html.html">HTML</h3></a>
- <p class="Menu"><h3><a href="https://pjjeniffer.github.io/Individual%20Project/css.html">CSS</h3></a>                                             
+    <h3><a href="https://pjjeniffer.github.io/Individual%20Project/css.html">CSS</h3></a></p>                                             
  <p class="Header"><h1>What is HTML and CSS?</h1></p>
  <p class="Content"><h4>HTML is HyperText Markup Language,The hypertext markup language is an application under the standard generic markup language,
                                         which is also a specification, a standard that marks the various parts of a web page to be displayed by marking symbols.CSS is Cascading Style Sheets,
