--- a/Individual Project/individual.html
+++ b/Individual Project/individual.html
@@ -3,45 +3,26 @@
 <title>Html And Css</title>
  <link rel="stylesheet" type="text/css" href="main.css" />
  <style type="text/css">
-
-  .Header {
-margin:50px 0px 10px 0px;
-padding:10px 0px 0px 20px;
-}
- .Content {
-margin:0px 100px 50px;
-padding:10px;
-}
-
- .Menu {
-position:absolute;
-top:50px;
-left:50px;
-}
+  .center 
+  {
+   text-align: center
+   color: #f60;
+  }
  </style>
 </head>
 <body">
       <img src="/Individual Project/girl.jpg"  alt="logo" height="100" width="100"/>
 <hr />
- <p class="Menu"><h3><a href="https://pjjeniffer.github.io/Individual%20Project/html.html">HTML</h3></a>
-    <h3><a href="https://pjjeniffer.github.io/Individual%20Project/css.html">CSS</h3></a></p>                                             
- <p class="Header"><h1>What is HTML and CSS?</h1></p>
- <p class="Content"><h4>HTML is HyperText Markup Language,The hypertext markup language is an application under the standard generic markup language,
+ <p><h3><a href="https://pjjeniffer.github.io/Individual%20Project/html.html">HTML</h3></a></p> 
+ <p><h3><a href="https://pjjeniffer.github.io/Individual%20Project/css.html">CSS</h3></a></p>                                            
+ <p class="center"><h1>What is HTML and CSS?</h1></p>
+ <p><h4>HTML is HyperText Markup Language,The hypertext markup language is an application under the standard generic markup language,
                                         which is also a specification, a standard that marks the various parts of a web page to be displayed by marking symbols.CSS is Cascading Style Sheets,
                                         A computer language used to display file styles such as HTML or XML. <br />CSS can be used to not only modify pages in a static way, 
                                         but also to format the elements of the page dynamically with various scripting languages.</h4></p>
 <hr/>
-<table border="0">
-<tr>
-<audio controls="controls">
-<source src="week1-2/梦中的婚礼.mp3" type="audio/mp3" />
-<source src="week1-2/梦中的婚礼.ogg" type="audio/ogg" />
-</tr>
-</table>
-</audio>
-
 <footer>
-      <p><font color="FFCC33">Made by: pjjeniffer</font></p>
+      <p><font color="FC90">Made by: pjjeniffer</font></p>
 </footer>
 </body>
 </html>
