--- a/Individual Project/htmltag.html
+++ b/Individual Project/htmltag.html
@@ -1,14 +1,47 @@
-﻿<html>
+<html>
 <head>
 <title>Html</title>
  <link rel="stylesheet" type="text/css" href="main.css" />
  <style type="text/css">
+ .center {text-align: center}
  </style>
 </head>
 <body">
       <img src="/Individual Project/girl.jpg"  alt="logo" height="100" width="100"/>
 <hr />
- <p><h2>HTML</h2></a>
+ <p class="center"><h2>HTML tag</h2></a>
+ <table border="1">
+  <tr>
+    <th>Tag</th>
+    <th>Use</th>
+    <th>Example</th>
+  </tr>
+  <tr>
+    <td>a</td>
+    <td>Define hyperlinks</td>
+    <td>a href="yoururl"</td>
+  </tr>
+  <tr>
+    <td>audio</td>
+    <td>Custom voice</td>
+    <td>audio src="xxx.wav"</td>
+  </tr>
+  <tr>
+    <td>blockquote</td>
+    <td>Definition block reference</td>
+    <td>The content in the blockquote,add a line wrap and increase the margins</td>
+  </tr>
+  <tr>
+    <td>body</td>
+    <td>The body that defines the document contains all the content of the document</td>
+    <td>every .html need tis tag</td>
+  </tr>
+   <tr>
+    <td>br</td>
+    <td>A newline</td>
+    <td><br /></td>
+  </tr> 
+</table>
 <hr/>
 <footer>
       <p><font color="FFCC33">Made by: pjjeniffer</font></p>
