--- a/Individual Project/htmltag.html
+++ b/Individual Project/htmltag.html
@@ -6,7 +6,7 @@
  .center {text-align: center}
  </style>
 </head>
-<body">
+<body>
       <img src="/Individual Project/girl.jpg"  alt="logo" height="100" width="100"/>
 <hr />
  <p class="center"><h2>HTML tag</h2></a>
