--- a/Individual Project/htmltag.html
+++ b/Individual Project/htmltag.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Html</title>
+<title>Html Tag</title>
  <link rel="stylesheet" type="text/css" href="main.css" />
  <style type="text/css">
  .center {text-align: center}
@@ -9,7 +9,7 @@
 <body>
       <img src="/Individual Project/girl.jpg"  alt="logo" height="100" width="100"/>
 <hr />
- <p class="center"><h2>HTML tag</h2></a>
+ <p class="center"><h2>HTML tag</h2></p>
  <table border="1">
   <tr>
     <th>Tag</th>
@@ -39,9 +39,170 @@
    <tr>
     <td>br</td>
     <td>A newline</td>
-    <td><br /></td>
+    <td>start a new line</td>
   </tr> 
+  <tr>
+    <td>button</td>
+    <td>Define a button</td>
+    <td>a button</td>
+  </tr>
+  <tr>
+    <td>center</td>
+    <td>Horizontal center for the text that it includes</td>
+    <td>/</td>
+  </tr>
+  <tr>
+    <td>div</td>
+    <td>Defines partitions or sections in a document</td>
+    <td>The div element is placed just before and after a newline character</td>
+  </tr>
+  <tr>
+    <td>dl</td>
+    <td>Defines a list of definitions</td>
+    <td> always use with tag dt (the items in the definition list) and tag dd (the items in the description list)</td>
+  </tr>
+  <tr>
+    <td>embed</td>
+    <td>Define embedded content, such as plug-ins</td>
+    <td>embed src="xxx.swf"/</td>
+  </tr>
+  <tr>
+    <td>font</td>
+    <td>Specifies the font, font size, and font color of the text</td>
+    <td>font size="3" color="red" face="a typeface"</td>
+  </tr>
+  <tr>
+    <td>footer</td>
+    <td>The footer part of the document</td>
+    <td>The footer write something about the author and ect.</td>
+  </tr>
+  <tr>
+    <td>h1-h6</td>
+    <td>Define the title size,h1 is the biggest,h6 is the smallest</td>
+    <td>also can be used in content</td>
+  </tr>
+  <tr>
+    <td>h1-h6</td>
+    <td>Define the title size,h1 is the biggest,h6 is the smallest</td>
+    <td>also can be used in content</td>
+  </tr>
+  <tr>
+    <td>head</td>
+    <td>Define the head of the document</td>
+    <td>The element is necessary for an HTML document</td>
+  </tr>
+  <tr>
+    <td>header</td>
+    <td>Define the header of the document</td>
+    <td>The header write the introduction of the homepage</td>
+  </tr>
+  <tr>
+    <td>hr</td>
+    <td>A horizontal line</td>
+    <td>hr/</td>
+  </tr>
+  <tr>
+    <td>html</td>
+    <td>Tell the browser that it is an HTML document</td>
+    <td>The element is necessary for an HTML document</td>
+  </tr>
+  <tr>
+    <td>i</td>
+    <td>Displays italic text</td>
+    <td>Need the break tag</td>
+  </tr>
+  <tr>
+    <td>img</td>
+    <td>Insert an image</td>
+    <td>img src="xxx.jpg"  alt="jast the photo profiles are used when images cannot be displayed" /</td>
+  </tr>
+  <tr>
+    <td>link</td>
+    <td>Link an external style sheet and write in the head tag</td>
+    <td>link rel="stylesheet" type="text/css" href="xxx.css" /</td>
+  </tr>
+  <tr>
+    <td>link</td>
+    <td>Link an external style sheet and write in the head tag</td>
+    <td>link rel="stylesheet" type="text/css" href="xxx.css" /</td>
+  </tr>
+  <tr>
+    <td>main</td>
+    <td>Specify the main contents of the document</td>
+    <td>Only once in a document</td>
+  </tr>
+  <tr>
+    <td>ol</td>
+    <td>Ordered HTML list</td>
+    <td>include with the li tag</td>
+  </tr>
+  <tr>
+    <td>ol</td>
+    <td>Ordered HTML list</td>
+    <td>include with the li tag</td>
+  </tr>
+  <tr>
+    <td>p</td>
+    <td>Mark a paragraph</td>
+    <td>a new paragraph</td>
+  </tr>
+  <tr>
+    <td>p</td>
+    <td>Mark a paragraph</td>
+    <td>a new paragraph</td>
+  </tr>
+  <tr>
+    <td>script</td>
+    <td>Insert a snippet of JavaScript into an HTML page need the end tag</td>
+    <td>script type="text/javascript"</td>
+  </tr>
+  <tr>
+    <td>script</td>
+    <td>Insert a snippet of JavaScript into an HTML page need the end tag</td>
+    <td>script type="text/javascript"</td>
+  </tr>
+  <tr>
+    <td>strong</td>
+    <td>Emphasis on text</td>
+    <td>Bold text font</td>
+  </tr>
+  <tr>
+    <td>style</td>
+    <td>Define style information for the HTML document</td>
+    <td>For style sheets</td>
+  </tr>
+  <tr>
+    <td>table</td>
+    <td>show the HTML table</td>
+    <td>use with the tr td th tag</td>
+  </tr>
+  <tr>
+    <td>th</td>
+    <td>The standard cell in the HTML table</td>
+    <td>Standard unit which contains data</td>
+  </tr>
+  <tr>
+    <td>tr</td>
+    <td>The standard cell in the HTML table</td>
+    <td>Header unit which contains header information</td>
+  </tr>
+  <tr>
+    <td>title</td>
+    <td>Define the title of the document</td>
+    <td>The title will become the default name for the document link</td>
+  </tr>
+  <tr>
+    <td>video</td>
+    <td>Define the video</td>
+    <td>video src="xxx.ogg" controls="controls"</td>
+  </tr>
+  <tr>
+    <td>!--...--</td>
+    <td>Insert comments which are not displayed in the browser</td>
+    <td>use for explain the code</td>
+  </tr>
 </table>
+ <a href="https://pjjeniffer.github.io/Individual%20Project/individual">back to homepage</a>
 <hr/>
 <footer>
       <p><font color="FFCC33">Made by: pjjeniffer</font></p>
