--- a/Individual Project/individual.html
+++ b/Individual Project/individual.html
@@ -21,8 +21,12 @@
                                         A computer language used to display file styles such as HTML or XML. <br />CSS can be used to not only modify pages in a static way, 
                                         but also to format the elements of the page dynamically with various scripting languages.</h4></p>
 <hr/>
+<audio controls="controls">
+  <source src="pjjeniffer.github.io/Individual Project/music.mp3" type="audio/ogg">
+  <source src="pjjeniffer.github.io/Individual Project/music.mp3" type="audio/mpeg">
+</audio>                  
 <footer>
-      <p><font color="FC90">Made by: pjjeniffer</font></p>
+      <p><font color="F90">Made by: pjjeniffer</font></p>
 </footer>
 </body>
 </html>
