--- a/Individual Project/html.html
+++ b/Individual Project/html.html
@@ -1,14 +1,19 @@
-﻿<html>
+<html>
 <head>
 <title>Html</title>
  <link rel="stylesheet" type="text/css" href="main.css" />
  <style type="text/css">
+ .center {text-align: center}
  </style>
 </head>
 <body">
       <img src="/Individual Project/girl.jpg"  alt="logo" height="100" width="100"/>
 <hr />
  <p><h2>HTML</h2></a>
+<embed src="https://v.qq.com/x/page/w0172wyt76a.html" width="480" height="400" >
+</embed>
+<p class="center"><h3>Some commonly used HTML tags</h3></p>
+<a href="https://pjjeniffer.github.io/Individual%20Project/htmltag.html"><h4>Html Tag</h4></a>
 <hr/>
 <footer>
       <p><font color="FFCC33">Made by: pjjeniffer</font></p>
