--- a/Individual Project/html.html
+++ b/Individual Project/html.html
@@ -10,9 +10,10 @@
       <img src="/Individual Project/girl.jpg"  alt="logo" height="100" width="100"/>
 <hr />
  <p><h2>HTML</h2></a>
-<embed src="https://v.qq.com/x/page/w0172wyt76a.html" width="1200" height="450" >
-</embed>
+<embed src="https://v.qq.com/x/page/w0172wyt76a.html" width="1000" height="400" ></embed>
 <p class="center"><h3>Some commonly used HTML tags</h3></p>
+<a href="https://pjjeniffer.github.io/Individual%20Project/htmltag.html"><h4>Html Tag</h4></a>
+<p><h3>Some commonly used HTML tags</h3></p>
 <a href="https://pjjeniffer.github.io/Individual%20Project/htmltag.html"><h4>Html Tag</h4></a>
 <hr/>
 <footer>
